2004-02-08  Dodji Seketeli  <dodji@gnome.org>

	* src/cr-style.c: more style structure debugging material.

2004-02-07  Dodji Seketeli  <dodji@gnome.org>

	* src/cr-fonts.[hc],src/cr-num.h,src/cr-style.[ch]:
	In the process of adding style structure debugging facilities.

2004-02-04  Dodji Seketeli  <dodji@gnome.org>

	* src/cr-style.c: cr_style_to_string() added this prototype. 
	Still have to code it.

2004-01-29  Dodji Seketeli  <dodji@gnome.org>

        * src/cr-sel-eng.c: 
	(cr_sel_eng_get_matched_style): make sure to set the fields
	of the style structure passed as an argument of the function, when
	its not NULL.
	* src/cr-style.c: 
	(cr_style_set_props_to_defaults): make this function public

2004-01-27  Gael CHAMOULAUD  <strider@gnome.org>

	* configure.in: Removed the old references with libgnomeui and pango !
	* csslint/csslint.c: (csslint_show_version): Made smallish cleanup

2004-01-27  Dodji Seketeli  <dodji@gnome.org>

	* src/cr-cascade.c: 
	(cr_cascade_new) don't forget to set the UA sheet.
	* src/cr-cascade.h: add void cr_cascade_ref() entry point.
	
2004-01-26  Dodji Seketeli  <dodji@gnome.org>

	* src/cr-cascade.[ch]:
	(cr_cascade_ref),(cr_cascade_unref): new convenience function
	* src/cr-om-parser.[ch]:
	(cr_om_parser_parse_paths_to_cascade),
	(cr_om_parser_simply_parse_paths_to_cascade): added these new parsing methods.

2004-01-26  Dodji Seketeli  <dodji@gnome.org>

	* src/cr-utils.h: added CR_FILE_NOT_FOUND_ERROR to
	the CRStatus enum.

2004-01-24  Dodji Seketeli  <dodji@gnome.org>

	* all: separated the library into two projects. Libcroco
	is now the combination of the parser and the selection engine.
	A new project is born: sewfox. It is basically the 
	xml rendering/layout engine.
	Libcroco now needs libxml2 and glib only.
	Sewfox need libgnomecanvas2.
	* autogen.sh: updated this to reflect this big change
	* tests/test-output-refs/test7.out: removed this test
	as it does not belong to libcroco anymore.
